--- a/material/partials/nav.html
+++ b/material/partials/nav.html
@@ -9,7 +9,7 @@
         <img src="{{ base_url }}/{{ config.theme.logo }}" width="48" height="48">
       {% endif %}
     </span>
-  {{ config.site_name }}
+    {{ config.site_name }}
   </label>
   {% if config.repo_url %}
     <div class="md-nav__source">
@@ -17,28 +17,26 @@
     </div>
   {% endif %}
   <ul class="md-nav__list" data-md-scrollfix>
-    <!--<li class="md-nav__item md-nav__item--nested">
-      <input class="md-toggle md-nav__toggle" data-md-toggle="nav-1" type="checkbox" id="nav-1">
-      <label class="md-nav__link" for="nav-1"><strong>
-        {{ config.site_name }}
-      </strong></label>
-      <nav class="md-nav" data-md-component="collapsible" data-md-level="1">
-        <label class="md-nav__title" for="nav-1">
-          {{ config.site_name }}
-        </label>
-        <ul class="md-nav__list" data-md-scrollfix>
-          <li class="md-nav__item">
-            <a href="http://localhost:8000/" title="Masking 5.3" class="md-nav__link">
-              Masking 5.3
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </li>-->
     {% for nav_item in nav %}
       {% set path = "nav-" + loop.index | string %}
       {% set level = 1 %}
       {% include "partials/nav-item.html" %}
     {% endfor %}
+  </ul>
+  <hr />
+  <label class="md-nav__title md-nav__title--site" for="__drawer">
+    Previous Releases
+  </label>
+  <ul class="md-nav__list" data-md-scrollfix>
+    <li class="md-nav__item">
+      <a href="https://docs.delphix.com/docs51/delphix-masking/masking-engine" title="Delphix Masking 5.1" target="_blank" class="md-nav__link">
+        Masking 5.1
+      </a>
+    </li>
+    <li class="md-nav__item">
+      <a href="https://docs.delphix.com/docs525/delphix-masking/delphix-masking-engine" title="Delphix Masking 5.2" target="_blank" class="md-nav__link">
+        Masking 5.2
+      </a>
+    </li>
   </ul>
 </nav>
