DOC-312 Add masking docs previous release 5.4.3 to maskingdocs.delphix.com
Reviewed at: http://reviews.delphix.com/r/51677/

--- a/material/partials/nav.html
+++ b/material/partials/nav.html
@@ -27,7 +27,11 @@
   <label class="md-nav__title md-nav__title--site" for="__drawer">
     Previous Releases
   </label>
-  <ul class="md-nav__list" data-md-scrollfix>
+  <ul class="md-nav__list" data-md-scrollfix>   <li class="md-nav__item">
+    <a href="5.3.4/" title="Delphix Masking 5.3.4" target="_blank" class="md-nav__link">
+      Masking 5.3.4
+    </a>
+  </li>
     <li class="md-nav__item">
       <a href="https://docs.delphix.com/docs51/delphix-masking/masking-engine" title="Delphix Masking 5.1" target="_blank" class="md-nav__link">
         Masking 5.1
