DOC-416 [Backport of Issue DOC-393] Broken link to previous masking doc releases
Reviewed at: http://reviews.delphix.com/r/54340/

--- a/material/partials/nav.html
+++ b/material/partials/nav.html
@@ -28,7 +28,7 @@
     Previous Releases
   </label>
   <ul class="md-nav__list" data-md-scrollfix>   <li class="md-nav__item">
-    <a href="../5.3.4/" title="Delphix Masking 5.3.4" target="_blank" class="md-nav__link">
+    <a href="/5.3.4/" title="Delphix Masking 5.3.4" target="_blank" class="md-nav__link">
       Masking 5.3.4
     </a>
   </li>
