--- a/material/partials/nav.html
+++ b/material/partials/nav.html
@@ -27,19 +27,21 @@
   <label class="md-nav__title md-nav__title--site" for="__drawer">
     Previous Releases
   </label>
-  <ul class="md-nav__list" data-md-scrollfix>   <li class="md-nav__item">
-    <a href="5.3.4/" title="Delphix Masking 5.3.4" target="_blank" class="md-nav__link">
-      Masking 5.3.4
-    </a>
-  </li>
+  <ul class="md-nav__list" data-md-scrollfix>
+    <li class="md-nav__item">
+      <a href="/5.3.5/" title="Masking 5.3.5" target="_blank" class="md-nav__link">
+        Masking 5.3.5
+    <li class="md-nav__item">
+      <a href="/5.3.4/" title="Masking 5.3.4" target="_blank" class="md-nav__link">
+        Masking 5.3.4
+    <li class="md-nav__item">
+      <a href="https://docs.delphix.com/docs526/delphix-masking/delphix-masking-engine" title="Delphix Masking 5.2" target="_blank" class="md-nav__link">
+        Masking 5.2
     <li class="md-nav__item">
       <a href="https://docs.delphix.com/docs51/delphix-masking/masking-engine" title="Delphix Masking 5.1" target="_blank" class="md-nav__link">
         Masking 5.1
       </a>
     </li>
-    <li class="md-nav__item">
-      <a href="https://docs.delphix.com/docs525/delphix-masking/delphix-masking-engine" title="Delphix Masking 5.2" target="_blank" class="md-nav__link">
-        Masking 5.2
       </a>
     </li>
   </ul>
