--- a/material/partials/nav.html
+++ b/material/partials/nav.html
@@ -29,6 +29,12 @@
   </label>
   <ul class="md-nav__list" data-md-scrollfix>
     <li class="md-nav__item">
+      <a href="/5.3.7/" title="Masking 5.3.7" target="_blank" class="md-nav__link">
+        Masking 5.3.7
+    <li class="md-nav__item">
+      <a href="/5.3.6/" title="Masking 5.3.6" target="_blank" class="md-nav__link">
+        Masking 5.3.6
+    <li class="md-nav__item">
       <a href="/5.3.5/" title="Masking 5.3.5" target="_blank" class="md-nav__link">
         Masking 5.3.5
     <li class="md-nav__item">
