DOC-459 dlpx-5.3 branch is using relative paths to previous release contents
Reviewed at: http://reviews.delphix.com/r/55341/

--- a/material/partials/nav.html
+++ b/material/partials/nav.html
@@ -29,13 +29,13 @@
   </label>
   <ul class="md-nav__list" data-md-scrollfix>
     <li class="md-nav__item">
-      <a href="5.3.6/" title="Masking 5.3.6" target="_blank" class="md-nav__link">
+      <a href="/5.3.6/" title="Masking 5.3.6" target="_blank" class="md-nav__link">
         Masking 5.3.6
     <li class="md-nav__item">
-      <a href="5.3.5/" title="Masking 5.3.5" target="_blank" class="md-nav__link">
+      <a href="/5.3.5/" title="Masking 5.3.5" target="_blank" class="md-nav__link">
         Masking 5.3.5
     <li class="md-nav__item">
-      <a href="5.3.4/" title="Masking 5.3.4" target="_blank" class="md-nav__link">
+      <a href="/5.3.4/" title="Masking 5.3.4" target="_blank" class="md-nav__link">
         Masking 5.3.4
     <li class="md-nav__item">
       <a href="https://docs.delphix.com/docs526/delphix-masking/delphix-masking-engine" title="Delphix Masking 5.2" target="_blank" class="md-nav__link">
